added ideal and needed inventory routes as well as future supplied routes with tests and swagger configs
